# NextGig

./: .gitignore  CMakeLists.txt  README.md  b_startBackend.sh  b_startFrontend.sh  main.cpp  start.sh  startBackend.sh  startFrontend.sh
backend/: CMakeLists.txt  main.cpp  server.cpp  server.h
frontend/: AddJobDialog.h  CMakeLists.txt  FreelancerPortal.cpp  FreelancerPortal.h  FreelancerProfileEdit.cpp  FreelancerProfileEdit.h  HiringManagerPortal.cpp  HiringManagerPortal.h  HiringManagerProfileEdit.cpp  HiringManagerProfileEdit.h  HomeWindow.cpp  HomeWindow.h  JobExpand.cpp  JobFeed.cpp  JobFeed.h  LoginWindow.cpp  LoginWindow.h  SignUpWindow.cpp  SignUpWindow.h  TextInputDialog.cpp  TextInputDialog.h  UserManager.cpp  UserManager.h  client.cpp  client.h  main.cpp
src/models/: Freelancer.cpp  Freelancer.h  HiringManager.h  Job.cpp  Job.h  Proposal.cpp  Proposal.h  User.cpp  User.h
